samples/_failures_safe/1761001982_bc18de_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b042bade.c: In function ‘main’:
./samples/SAFE/__tmp_b042bade.c:145:5: error: expected expression at end of input
  145 |     for (size_t i = 0; i < len; i++)
      |     ^~~
./samples/SAFE/__tmp_b042bade.c:145:5: error: expected declaration or statement at end of input
